extract modules "AddressView", "DeliveryTypePicker", "FeaturedShops", "FeatureView"

--- a/.swiftpm/xcode/xcshareddata/xcschemes/swift-explore-navigation.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/swift-explore-navigation.xcscheme
@@ -48,6 +48,48 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DeliveryTypePicker"
+               BuildableName = "DeliveryTypePicker"
+               BlueprintName = "DeliveryTypePicker"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AddressView"
+               BuildableName = "AddressView"
+               BlueprintName = "AddressView"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FeaturedShopsView"
+               BuildableName = "FeaturedShopsView"
+               BlueprintName = "FeaturedShopsView"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
