rename `AddressView` module to `AddressViewFeature`

--- a/.swiftpm/xcode/xcshareddata/xcschemes/swift-explore-navigation.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/swift-explore-navigation.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ShopFeature"
-               BuildableName = "ShopFeature"
-               BlueprintName = "ShopFeature"
+               BlueprintIdentifier = "AddressViewFeature"
+               BuildableName = "AddressViewFeature"
+               BlueprintName = "AddressViewFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,9 +28,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "PromoStripFeature"
-               BuildableName = "PromoStripFeature"
-               BlueprintName = "PromoStripFeature"
+               BlueprintIdentifier = "MainPageFeature"
+               BuildableName = "MainPageFeature"
+               BlueprintName = "MainPageFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -42,9 +42,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ShopTypeStripFeature"
-               BuildableName = "ShopTypeStripFeature"
-               BlueprintName = "ShopTypeStripFeature"
+               BlueprintIdentifier = "PromoFeature"
+               BuildableName = "PromoFeature"
+               BlueprintName = "PromoFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -70,9 +70,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "AddressView"
-               BuildableName = "AddressView"
-               BlueprintName = "AddressView"
+               BlueprintIdentifier = "ShopTypeStripFeature"
+               BuildableName = "ShopTypeStripFeature"
+               BlueprintName = "ShopTypeStripFeature"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AppFeature"
+               BuildableName = "AppFeature"
+               BlueprintName = "AppFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -126,37 +140,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "AddressPickerFeature"
-               BuildableName = "AddressPickerFeature"
-               BlueprintName = "AddressPickerFeature"
-               ReferencedContainer = "container:">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "NewAppFeatureFeature"
-               BuildableName = "NewAppFeatureFeature"
-               BlueprintName = "NewAppFeatureFeature"
-               ReferencedContainer = "container:">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "ProfileFeature"
                BuildableName = "ProfileFeature"
                BlueprintName = "ProfileFeature"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PromoStripFeature"
+               BuildableName = "PromoStripFeature"
+               BlueprintName = "PromoStripFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -182,9 +182,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "MainPageFeature"
-               BuildableName = "MainPageFeature"
-               BlueprintName = "MainPageFeature"
+               BlueprintIdentifier = "ShopFeature"
+               BuildableName = "ShopFeature"
+               BlueprintName = "ShopFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -210,9 +210,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "AppFeature"
-               BuildableName = "AppFeature"
-               BlueprintName = "AppFeature"
+               BlueprintIdentifier = "AddressPickerFeature"
+               BuildableName = "AddressPickerFeature"
+               BlueprintName = "AddressPickerFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -224,9 +224,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "PromoFeature"
-               BuildableName = "PromoFeature"
-               BlueprintName = "PromoFeature"
+               BlueprintIdentifier = "NewAppFeatureFeature"
+               BuildableName = "NewAppFeatureFeature"
+               BlueprintName = "NewAppFeatureFeature"
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
@@ -260,9 +260,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "ShopFeature"
-            BuildableName = "ShopFeature"
-            BlueprintName = "ShopFeature"
+            BlueprintIdentifier = "AddressViewFeature"
+            BuildableName = "AddressViewFeature"
+            BlueprintName = "AddressViewFeature"
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
